# PythonValidator

./: .sops.yaml  Dockerfile  container.sh  docker-compose.yaml  hehe.py  pyproject.toml  remove.sh  run.sh  stop.sh  submit.css  submit.html  submit.js  test  upload.php  validate.sh
Docker/: Dockerfile  createcontainer.sh  run_script.sh  run_scripts.sh  validate.sh
Docker/StudentValidations/: starek.py.out  third.py.out
Output/task/: fero.py.out  mato.py.out
Output/task/final/: fero.final
Scripts/: validate.sh
Tasks/task/: fero.py  mato.py
TestCases/Task1/: Student.py
TestCases/task/: fero.py  jozo.py
TestFiles/: starek.py  test.py  third.py
output/: files_data.csv  results.csv  starek.txt  test.txt
testenv/: Dockerfile
